[gd_scene load_steps=6 format=3 uid="uid://b1flsoesv8fuv"]

[ext_resource type="Script" path="res://Source/PauseMenuOLD/pause_menu.gd" id="1_q4ob3"]
[ext_resource type="PackedScene" uid="uid://c4kaqc6v50icy" path="res://Source/PauseMenuOLD/PauseMenuCell/pause_menu_cell.tscn" id="2_848s4"]
[ext_resource type="Shader" path="res://Assets/Resources/Shaders/shadow_shader.gdshader" id="3_w0c82"]
[ext_resource type="PackedScene" uid="uid://dtt217vy536bg" path="res://Source/PauseMenuOLD/Options/options.tscn" id="4_y3ffk"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_k5ahm"]
shader = ExtResource("3_w0c82")
shader_parameter/pixel_offset = Vector2(1, -1)
shader_parameter/shadow_color = null

[node name="PauseMenu" type="Control"]
process_mode = 3
z_index = 2
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q4ob3")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.501961)

[node name="Menu" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -28.0
offset_top = -120.0
offset_right = 28.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16
alignment = 1

[node name="Resume" parent="Menu" instance=ExtResource("2_848s4")]
layout_mode = 2
title = "CONTINUAR"

[node name="LevelSelection" parent="Menu" instance=ExtResource("2_848s4")]
layout_mode = 2
title = "SAIR DO NÍVEL"

[node name="Options" parent="Menu" instance=ExtResource("2_848s4")]
layout_mode = 2
title = "OPÇÕES"

[node name="Quit" parent="Menu" instance=ExtResource("2_848s4")]
layout_mode = 2
title = "VOLTAR PARA O MENU"

[node name="Options" parent="." instance=ExtResource("4_y3ffk")]
layout_mode = 1

[node name="Shader" type="ColorRect" parent="."]
z_index = 2
material = SubResource("ShaderMaterial_k5ahm")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="selected" from="Menu/Resume" to="." method="_on_resume_selected"]
[connection signal="selected" from="Menu/LevelSelection" to="." method="_on_level_selection_selected"]
[connection signal="selected" from="Menu/Options" to="." method="_on_options_selected"]
[connection signal="selected" from="Menu/Quit" to="." method="_on_quit_selected"]
[connection signal="closed" from="Options" to="." method="_on_options_closed"]
